# hsr-perception-robocup

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pytest.ini  requirements.txt  run_app.sh  start.sh
.github/: docker-compose.ci.yml
.github/workflows/: ci.yml
.serena/: project.yml
app/: config.py  main.py  object_registry.py  requirements.txt
app/components/: __init__.py  captured_images_tree.py  common_sidebar.py  config_preview.py  dataset_status.py  ihr_import.py  object_editor.py  object_form.py  object_viewer.py  profile_management.py  progress_display.py  robustness_augmentation.py  robustness_test.py  ros2_collection.py  ros2_command_launcher.py  system_status.py  tensorboard_embed.py  thumbnail_upload.py  training_advanced_params.py  training_charts.py  training_styles.py  video_extractor.py  video_player.py
app/data/: object_registry.json
app/pages/: 1_Dashboard.py  2_Registry.py  3_Collection.py  4_Annotation.py  5_Training.py  6_Evaluation.py  7_Settings.py  __init__.py
app/services/: __init__.py  command_presets_manager.py  dataset_preparer.py  path_coordinator.py  profile_manager.py  ros2_bridge.py  ros2_process_tracker.py  task_manager.py  ui_settings_manager.py
app/utils/: __init__.py  exceptions.py  logger.py
config/: command_presets.json  fastdds_profile.xml  object_classes.json
docker/: 99-xtion.rules  Dockerfile  Dockerfile.ci  Dockerfile.xtion  entrypoint.sh
docs/: app_guide.md  app_guide_en.md  configuration.md  implementation.md  purrfect-gathering-ember.md  training-process-critical-review.md  xtion_setup.md
docs/en/: app_guide.md
docs/guides/: annotation.md  collection.md  evaluation.md  registry.md  training.md
notebooks/: sam3_tracker_colab.ipynb
scripts/: __init__.py
scripts/annotation/: __init__.py  annotation_utils.py  auto_annotate.py  background_subtraction.py  base_annotator.py  colab_utils.py  prepare_dataset.py  sam2_annotator.py  sam2_interactive_app.py  sam3_tracker.py  test_video_tracking.py  video_tracking_predictor.py  visualization.py
scripts/augmentation/: __init__.py  copy_paste_augmentor.py  object_extractor.py  (+1 more)
src/hsr_perception/: CMakeLists.txt  package.xml
src/hsr_perception/hsr_perception/: __init__.py  continuous_capture_node.py
src/hsr_perception/hsr_perception/utils/: __init__.py
src/hsr_perception/launch/: capture.launch.py
src/hsr_perception/srv/: GetStatus.srv  SetClass.srv  StartBurst.srv
tests/: README.md  __init__.py  conftest.py
(+190 files in other folders)
